--- a/prj/templates/flatpages/contact_page.html
+++ b/prj/templates/flatpages/contact_page.html
@@ -6,7 +6,7 @@
 <body>
     <h2>{{ flatpage.title }}</h2>
     <hr>
-    <h3>Наши контакты:</h3>
+    <i>Наши контакты:</i>
     {{ flatpage.content }}
 </body>
 </html>
