еще что-то добавили

--- a/prj/templates/flatpages/double.html
+++ b/prj/templates/flatpages/double.html
@@ -12,5 +12,8 @@
 
     <h2 style="text-align: center;"><em>{{ flatpage.content }}</em></h2>
     <h1 style="text-align: center;"><span style="text-decoration: underline;">{{ flatpage.content }}</span></h1>
+
+    <hr>
+    <h2 style="text-align: justify;"><strong>И что-то такое еще<img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool" /></strong></h2>
 </body>
 </html>
