--- a/prj/templates/flatpages/default.html
+++ b/prj/templates/flatpages/default.html
@@ -4,6 +4,6 @@
 <title>{{ flatpage.title }}</title>
 </head>
 <body>
-{{ flatpage.content }}
+{% include 'flatpages/contact_page.html' %}
 </body>
 </html>
