--- a/prj/templates/flatpages/default.html
+++ b/prj/templates/flatpages/default.html
@@ -36,15 +36,13 @@
         </nav>
         <!-- Page content-->
         <div class="container">
-            <div class="text-center mt-5">
-                <h1>A Bootstrap 5 Starter Template</h1>
-                <p class="lead">A complete project boilerplate built with Bootstrap</p>
-                <p>Bootstrap v5.1.3</p>
-            </div>
-        </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+   <div class="row">
+       <div class="col-lg-12 text-center">
+           {% block content %}
+           {{ flatpage.content }}
+           {% endblock content %}
+       </div>
+   </div>
+</div>
     </body>
 </html>
