снова меняем шаблон

--- a/prj/templates/flatpages/double.html
+++ b/prj/templates/flatpages/double.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>{{ flatpage.title }}</title>
-</head>
-<body>
+{% extends 'flatpages/default.html' %}
+
+{% block title %}
+{{ flatpage.title }}
+{% endblock title %}
+
+{% block content %}
     <h2>{{ flatpage.title }}</h2>
     <hr>
-
-
-    <hr>
-
     <h2 style="text-align: center;"><em>{{ flatpage.content }}</em></h2>
     <h1 style="text-align: center;"><span style="text-decoration: underline;">{{ flatpage.content }}</span></h1>
 
     <hr>
     <h2 style="text-align: justify;"><strong>И что-то такое еще<img src="https://html5-editor.net/tinymce/plugins/emoticons/img/smiley-cool.gif" alt="cool" /></strong></h2>
-</body>
-</html>
+
+{% endblock content %}
+
