--- a/prj/templates/flatpages/default.html
+++ b/prj/templates/flatpages/default.html
@@ -32,6 +32,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/about/">About</a>
                         </li>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/double/">Double Text</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/contacts/">Contact</a>
                         </li>
