--- a/prj/templates/flatpages/contact_page.html
+++ b/prj/templates/flatpages/contact_page.html
@@ -5,8 +5,8 @@
 {% endblock title %}
  
 {% block content %}
-    <h2>{{ flatpage.title }}</h2>
+    <h1>{{ flatpage.title }}</h1>
     <hr>
-    <h3>Наши контакты:</h3>
+    <i>Наши контакты:</i>
 {{ flatpage.content }}
 {% endblock content %}
